--- a/style.css
+++ b/style.css
@@ -72,9 +72,66 @@ section img{
 }
 article{
   width: 80%;
-  margin: 20px;
+  margin-left: 20px;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+#build{
+  border: 1px solid #ccc;
+  text-align: center;
+  width: 50%;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 15px;
+  border-radius: 10px;
+  box-shadow: 3px 5px 10px gray;
+  
+}
+#build button{
+  color: #fff;
+  padding: 15px;
+  background-color: hsl(322, 100%, 66%);
+  border: none;
+  border-radius: 30px;
+  width: 60%;
 }
 
 footer{
-  background-color: dimgray;
+  background-color: hsl(208, 11%, 55%);
+  display: inline-flex;
+  color: #fff;
+  margin-right: 10px;
+  margin-left: 10px;
+  
+}
+#footer-logo{
+  margin: 20px auto 20px auto;
+}
+.footer-image{
+  margin-right: 10px;
+}
+footer p{
+  display: inline;
+}
+#one{
+  width: 25%;
+  padding: 10px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+#two{
+  width: 25%;
+  margin-top: 50px;
+  padding: 10px;
+}
+footer li{
+  list-style: none;
+  text-decoration: none;
+  padding: 10px;
+}
+#footer-logo{
+  width: 80%;
+}
+footer span{
+  display: block;
 }
